--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en-us">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,30 +7,25 @@
   <title>Newsletter Template</title>
   <meta name="description" content="150 characters">
   <link rel="stylesheet" href="css/style.css">
+  <!-- much more needed here for definition -->
 </head>
-
 <body>
   <header>
 
   </header>
-  <picture>
-    <img src="#" alt="afds">
-  </picture>
   <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="students.html">Our Students</a></li>
-      <li><a href="updates.html">Updates</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-  </nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="students.html">Our Students</a></li>
+        <li><a href="updates.html">Updates</a></li>
+      </ul>
+    </nav>
   <main>
-
+   <!-- page content here depending on page  -->
   </main>
   <footer>
-
+      &copy; | | |
   </footer>
 
 </body>
-
 </html>
