I think I finished the HTML part

--- a/students.html
+++ b/students.html
@@ -12,11 +12,14 @@
 
 <body>
   <header>
-
+      <div class="Logo-box">
+          <a href="https://library.byui.edu/"><img src="images/Logo.png" alt="Logo"></a>
+          <h3>Circulation Team David O. McKay Library</h3>
+      </div>
   </header>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="#">Home</index></a></li>
       <li><a href="students.html">Our Students</a></li>
       <li><a href="updates.html">Updates</a></li>
     </ul>
@@ -25,59 +28,135 @@
     <h2>Get To Konw Our New Hires</h2>
     <div class="grid-2">
       <article>
-        <img src="#" alt="#">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione placeat temporibus
-          possimus, quam, maiores aliquam minima perferendis vero deserunt, repudiandae doloribus
-          labore nihil dolorem esse ipsam dolorum voluptatem. Molestias modi dignissimos nihil
-          doloribus recusandae id corporis earum deserunt minus qui totam voluptatibus odio
-          doloremque numquam veniam, quod sunt, eaque excepturi.</p>
+        <img src="#" alt="Caroline">
+        <p>Caroline Diniz Gonçalves Mota <br><br>"I am from São Paulo, Brazil. I'm an interdisciplinary studies major 
+          <br>(Spanish-Music), I love to play the cello and my plans are working 
+          <br>with translation and private cello lessons for Kids."</p>
       </article>
       <article>
-        <img src="#" alt="#">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione placeat temporibus
-          possimus, quam, maiores aliquam minima perferendis vero deserunt, repudiandae doloribus
-          labore nihil dolorem esse ipsam dolorum voluptatem. Molestias modi dignissimos nihil
-          doloribus recusandae id corporis earum deserunt minus qui totam voluptatibus odio
-          doloremque numquam veniam, quod sunt, eaque excepturi.</p>
+        <img src="#" alt="Chris">
+        <p>Chris Cuevas <br><br>"I’m from Florida, I love the beach and playing guitar. I plan on 
+          <br>working for my mission president’s car dealership and 
+          <br>owning my own later on."</p>
       </article>
       <article>
-        <img src="#" alt="#">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione placeat temporibus
-          possimus, quam, maiores aliquam minima perferendis vero deserunt, repudiandae doloribus
-          labore nihil dolorem esse ipsam dolorum voluptatem. Molestias modi dignissimos nihil
-          doloribus recusandae id corporis earum deserunt minus qui totam voluptatibus odio
-          doloremque numquam veniam, quod sunt, eaque excepturi.</p>
+        <img src="#" alt="Bryce">
+        <p>Bryce Blignaut <br><br>"I’m from South Africa. I love riding motorcycles and my major is
+          <br>industrial psychology."</p>
       </article>
       <article>
-        <img src="#" alt="#">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione placeat temporibus
-          possimus, quam, maiores aliquam minima perferendis vero deserunt, repudiandae doloribus
-          labore nihil dolorem esse ipsam dolorum voluptatem. Molestias modi dignissimos nihil
-          doloribus recusandae id corporis earum deserunt minus qui totam voluptatibus odio
-          doloremque numquam veniam, quod sunt, eaque excepturi.</p>
+        <img src="#" alt="Kusum">
+        <p>Kusum Dhakal <br><br>"I am Kusum and I am from Nepal. It’s been two years that I am
+          <br>here in BYUI. My major is Food Science and I want to be a food 
+          <br>scientist. I love cooking and I can make different dishes, 
+          <br>mostly authentic Nepali food."</p>
       </article>
       <article>
-        <img src="#" alt="#">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione placeat temporibus
-          possimus, quam, maiores aliquam minima perferendis vero deserunt, repudiandae doloribus
-          labore nihil dolorem esse ipsam dolorum voluptatem. Molestias modi dignissimos nihil
-          doloribus recusandae id corporis earum deserunt minus qui totam voluptatibus odio
-          doloremque numquam veniam, quod sunt, eaque excepturi.</p>
+        <img src="#" alt="Suzzane">
+        <p>Suzanne Magalhaes<br><br>Hi, I’m from Norway 🇳🇴 I’ve been living in the last 9 years in 
+          <br>"Switzerland 🇨🇭. A couple of months ago my family and I moved 
+          <br>to Juneau Alaska where we are building a treehouse lodge. I’m 
+          <br>here in a Rexburg studying marriage and family. I love to sing, 
+          <br>listen to audiobooks (fiction/fantasy. Harry Potter is still a 
+          <br>favorite), play board games, going to church and taco."</p>
+      </article>
+      <article>
+        <img src="#" alt="Cassidy">
+        <p>Cassidy Zapalac<br><br>"I am from Southern California, I love to hang out with Wesley my 
+          <br>service dog. I enjoy camping and eating ice cream. I plan to 
+          <br>eventually become a teacher and hopefully, have a family one 
+          <br>day. If it happens, who knows. I want the library to remember 
+          <br>how nice it is to be in my company. Also that I am the world's 
+          <br>worst speller."</p>
+      </article>
+      <article>
+          <img src="#" alt="Newton">
+          <p>MJ Newton<br><br>"I was born and raised in Illinois, but while on my mission my
+            <br>family moved to Arizona. I love to spend time with my husband, 
+            <br>friends, and family. I love to play board games, sing and dance. My 
+            <br>major is Elementary Education with a minor in TESOL. My future 
+            <br>plans are to eventually start a family and finish my degree. After 
+            <br>that, we shall see! I love getting to know people and smiling."</p>
+      </article>
+      <article>
+          <img src="#" alt="Ashlyn">
+          <p>Ashlyn Worthington<br><br>"I’m from Billings, Montana. I like to run and write calligraphy. My 
+            <br>current major is Elementary Education, but isn’t set in stone. I plan
+            <br>to hopefully teach elementary school, planning on a mission after 
+            <br>my second semester."
+          </p>
+      </article>
+      <article>
+          <img src="#" alt="Anderson">
+          <p>Anderson Gbalo<br><br>"I am Anderson Gbalo. I come from Côte d’Ivoire and my major is 
+            <br>Accounting. I love to play soccer and spend time with friends. For 
+            <br>my future plan, I will love to be a CEO in my company where I can 
+            <br>hire a lot of people looking for a job. Plan to help children who 
+            <br>did not have the opportunity to pursue their education because 
+            <br>of a lack of money. I will love the library to remember that I am a 
+            <br>kind person always available to serve his brothers and sisters 
+            <br>and hard workers who love everybody."</p>
+      </article>
+      <article>
+          <img src="#" alt="Lily">
+          <p>Lily Liu <br><br>"I am from China. My favorite things to do are traveling and 
+            <br>cooking! I am doing pre-med and planning to be a PA. I want you 
+            <br>to remember that I work hard and I have a positive attitude."</p>
       </article>
     </div>
     <h2>Check Out Our Graduate Students</h2>
     <div class="grid-1">
       <article>
-        <img src="#" alt="#">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione placeat temporibus
-          possimus, quam, maiores aliquam minima perferendis vero deserunt, repudiandae doloribus
-          labore nihil dolorem esse ipsam dolorum voluptatem. Molestias modi dignissimos nihil
-          doloribus recusandae id corporis earum deserunt minus qui totam voluptatibus odio
-          doloremque numquam veniam, quod sunt, eaque excepturi.</p>
+        <img src="#" alt="Kyle">
+        <p>Kyle Autrey<br><br>"I'm from Fort Worth, Texas, I enjoy being outside: hiking, 
+          <br>swimming, mountain biking, spelunking, walking the dog, etc. 
+          <br>I enjoy working on my truck (not spending the money, but 
+          <br>finishing projects on it is very satisfying). I'm talking with a few 
+          <br>companies right now so I can't say exactly what I'll be doing 
+          <br>when I graduate but whatever it is, it'll be great! I plan on 
+          <br>going back to school to get an MBA in a few years. I'm very 
+          <br>grateful that I was able to work at the library for the last 2 
+          <br>years. Because of working here, I've grown hard skills in 
+          <br>leadership, problem-solving, communication, budgeting, goal 
+          <br>setting, scheduling, innovation, and so many others. I'm also 
+          <br>grateful for everyone helping out and being so kind to my 
+          <br>family these last few semesters especially while Dani was at 
+          <br>work. It's been a huge blessing for us. Please keep in touch!"</p>
       </article>
+      <article>
+        <img src="#" alt="Julius">
+        <p>Julius Ng'ambi <br><br>"From Zambia, I like traveling, all kinds of outdoor sports 
+          <br>especially golf and soccer. I enjoy gardening, dancing and 
+          <br>spending time with my wife. Major: Business Management - 
+          <br>Marketing. Future plan - having a family, studying 
+          <br>business/cooperate law to either work for the U.S government or 
+          <br>freelance in Europe and Africa. I want the library to remember me 
+          <br>for many different reasons as I will remember it."</p>
+      </article>
+      <article>
+        <img src="#" alt="Mila">
+        <p>Mila Argueta <br><br>"I am from Iowa. My parents are from Arizona and Guatemala. I 
+          <br>love ice cream. I will live and die for ice cream. I am an English 
+          <br>major. I love to talk about deep things. I am a thinker...I am 
+          <br>always thinking and analyzing. I love soccer, playing sports for 
+          <br>fun, being active, eating, watching movies, and reading real 
+          <br>books. I want to be remembered for my sass and awkwardness."</p>
+      </article>
+      <article>
+        <img src="#" alt="McKenzie">
+        <p>McKenzie<br><br>dolor sit amet consectetur adipisicing elit. Ratione 
+          <br>placeat temporibus possimus, quam, maiores aliquam minima 
+          <br>perferendis vero deserunt, repudiandae doloribut labore nihil 
+          <br>dolorem esse ipsam dolorum voluptatem. Molestias modid ignissimos
+          <br>nihil doloribus recusandae id corporis earum deserunt minus qui 
+          <br>totam voluptatibus odio doloremque numquam veniam, quod sunt,
+          <br>eaque excepturi.</p>
+      </article>    
   </main>
   <footer>
-    &copy; | | |
+    <p>
+      This web page is not affiliated or supported  by any institution <br/>&copy; 2019 Circulation Team
+    </p>
   </footer>
 
 </body>
