--- a/index.html
+++ b/index.html
@@ -12,24 +12,33 @@
 
 <body>
   <header>
-
+      <div class="Logo-box">
+      <a href="https://library.byui.edu/"><img src="images/Logo.png" alt="Logo"></a>
+      <h3>Circulation Team David O. McKay Library</h3>
+      </div>
   </header>
   <picture>
-    <img src="#" alt="afds">
+    <img src="images/Head Picture.png" alt="David O. McKayLibrary">
   </picture>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="students.html">Our Students</a></li>
-      <li><a href="updates.html">Updates</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="updates.html">News Feed</a></li>
     </ul>
   </nav>
+  </div>
   <main>
-
+    <div>
+      <h1>The Pride</h1>
+      <img src="images/Lion Logo.jpg" alt="Circulation Logo">
+      <h1>Welcome to our Winter 2019 Newsletter</h1>
+    </div>
   </main>
   <footer>
-&copy; 2019 | Newsletter | lasdjf;ls
+    <p>
+      This web page is not affiliated or supported  by any institution <br/>&copy; 2019 Circulation Team
+    </p>
   </footer>
 
 </body>
