--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   <header>
       <div class="Logo-box">
-      <a href="https://library.byui.edu/"><img src="images/Logo.png" alt="Logo"></a>
+      <a href="https://library.byui.edu/"><img src="images/Logo and Head Pictures/Logo.png" alt="Logo"></a>
       <h3>Circulation Team David O. McKay Library</h3>
       </div>
   </header>
   <picture>
-    <img src="images/Head Picture.png" alt="David O. McKayLibrary">
+    <img src="images/Logo and Head Pictures/Head Picture.png" alt="David O. McKayLibrary">
   </picture>
   <nav>
     <ul>
@@ -31,7 +31,7 @@
   <main>
     <div>
       <h1>The Pride</h1>
-      <img src="images/Lion Logo.jpg" alt="Circulation Logo">
+      <img src="images/Logo and Head Pictures/Lion Logo.jpg" alt="Circulation Logo">
       <h1>Welcome to our Winter 2019 Newsletter</h1>
     </div>
   </main>
