--- a/students.html
+++ b/students.html
@@ -13,7 +13,7 @@
 <body>
   <header>
       <div class="Logo-box">
-          <a href="https://library.byui.edu/"><img src="images/Logo.png" alt="Logo"></a>
+          <a href="https://library.byui.edu/"><img src="images/Logo and Head Pictures/Logo.png" alt="Logo"></a>
           <h3>Circulation Team David O. McKay Library</h3>
       </div>
   </header>
@@ -28,31 +28,31 @@
     <h2>Get To Konw Our New Hires</h2>
     <div class="grid-2">
       <article>
-        <img src="#" alt="Caroline">
+        <img src="images/New hires/Carol.jpg" alt="Caroline">
         <p>Caroline Diniz Gonçalves Mota <br><br>"I am from São Paulo, Brazil. I'm an interdisciplinary studies major 
           <br>(Spanish-Music), I love to play the cello and my plans are working 
           <br>with translation and private cello lessons for Kids."</p>
       </article>
       <article>
-        <img src="#" alt="Chris">
+        <img src="images/New hires/Chris.jpg" alt="Chris">
         <p>Chris Cuevas <br><br>"I’m from Florida, I love the beach and playing guitar. I plan on 
           <br>working for my mission president’s car dealership and 
           <br>owning my own later on."</p>
       </article>
       <article>
-        <img src="#" alt="Bryce">
+        <img src="images/New hires/Bryce.jpg" alt="Bryce">
         <p>Bryce Blignaut <br><br>"I’m from South Africa. I love riding motorcycles and my major is
           <br>industrial psychology."</p>
       </article>
       <article>
-        <img src="#" alt="Kusum">
+        <img src="images/New hires/Kusum.jpg" alt="Kusum">
         <p>Kusum Dhakal <br><br>"I am Kusum and I am from Nepal. It’s been two years that I am
           <br>here in BYUI. My major is Food Science and I want to be a food 
           <br>scientist. I love cooking and I can make different dishes, 
           <br>mostly authentic Nepali food."</p>
       </article>
       <article>
-        <img src="#" alt="Suzzane">
+        <img src="images/New hires/Suzzane.jpg" alt="Suzzane">
         <p>Suzanne Magalhaes<br><br>Hi, I’m from Norway 🇳🇴 I’ve been living in the last 9 years in 
           <br>"Switzerland 🇨🇭. A couple of months ago my family and I moved 
           <br>to Juneau Alaska where we are building a treehouse lodge. I’m 
@@ -61,7 +61,7 @@
           <br>favorite), play board games, going to church and taco."</p>
       </article>
       <article>
-        <img src="#" alt="Cassidy">
+        <img src="images/New hires/cassidy.jpg" alt="Cassidy">
         <p>Cassidy Zapalac<br><br>"I am from Southern California, I love to hang out with Wesley my 
           <br>service dog. I enjoy camping and eating ice cream. I plan to 
           <br>eventually become a teacher and hopefully, have a family one 
@@ -70,7 +70,7 @@
           <br>worst speller."</p>
       </article>
       <article>
-          <img src="#" alt="Newton">
+          <img src="images/New hires/MJ.jpg" alt="Newton">
           <p>MJ Newton<br><br>"I was born and raised in Illinois, but while on my mission my
             <br>family moved to Arizona. I love to spend time with my husband, 
             <br>friends, and family. I love to play board games, sing and dance. My 
@@ -79,7 +79,7 @@
             <br>that, we shall see! I love getting to know people and smiling."</p>
       </article>
       <article>
-          <img src="#" alt="Ashlyn">
+          <img src="images/New hires/ashlyn.jpg" alt="Ashlyn">
           <p>Ashlyn Worthington<br><br>"I’m from Billings, Montana. I like to run and write calligraphy. My 
             <br>current major is Elementary Education, but isn’t set in stone. I plan
             <br>to hopefully teach elementary school, planning on a mission after 
@@ -87,7 +87,7 @@
           </p>
       </article>
       <article>
-          <img src="#" alt="Anderson">
+          <img src="images/New hires/Anderson.jpg" alt="Anderson">
           <p>Anderson Gbalo<br><br>"I am Anderson Gbalo. I come from Côte d’Ivoire and my major is 
             <br>Accounting. I love to play soccer and spend time with friends. For 
             <br>my future plan, I will love to be a CEO in my company where I can 
@@ -98,7 +98,7 @@
             <br>and hard workers who love everybody."</p>
       </article>
       <article>
-          <img src="#" alt="Lily">
+          <img src="images/New hires/Lily.jpg" alt="Lily">
           <p>Lily Liu <br><br>"I am from China. My favorite things to do are traveling and 
             <br>cooking! I am doing pre-med and planning to be a PA. I want you 
             <br>to remember that I work hard and I have a positive attitude."</p>
@@ -107,7 +107,7 @@
     <h2>Check Out Our Graduate Students</h2>
     <div class="grid-1">
       <article>
-        <img src="#" alt="Kyle">
+        <img src="images/Graduatings/Kiyle.jpg" alt="Kyle">
         <p>Kyle Autrey<br><br>"I'm from Fort Worth, Texas, I enjoy being outside: hiking, 
           <br>swimming, mountain biking, spelunking, walking the dog, etc. 
           <br>I enjoy working on my truck (not spending the money, but 
@@ -124,7 +124,7 @@
           <br>work. It's been a huge blessing for us. Please keep in touch!"</p>
       </article>
       <article>
-        <img src="#" alt="Julius">
+        <img src="images/Graduatings/Julius.jpg" alt="Julius">
         <p>Julius Ng'ambi <br><br>"From Zambia, I like traveling, all kinds of outdoor sports 
           <br>especially golf and soccer. I enjoy gardening, dancing and 
           <br>spending time with my wife. Major: Business Management - 
@@ -134,7 +134,7 @@
           <br>for many different reasons as I will remember it."</p>
       </article>
       <article>
-        <img src="#" alt="Mila">
+        <img src="images/Graduatings/Milla.jpg" alt="Mila">
         <p>Mila Argueta <br><br>"I am from Iowa. My parents are from Arizona and Guatemala. I 
           <br>love ice cream. I will live and die for ice cream. I am an English 
           <br>major. I love to talk about deep things. I am a thinker...I am 
@@ -143,7 +143,7 @@
           <br>books. I want to be remembered for my sass and awkwardness."</p>
       </article>
       <article>
-        <img src="#" alt="McKenzie">
+        <img src="images/Graduatings/Makenzie.jpg" alt="McKenzie">
         <p>McKenzie<br><br>dolor sit amet consectetur adipisicing elit. Ratione 
           <br>placeat temporibus possimus, quam, maiores aliquam minima 
           <br>perferendis vero deserunt, repudiandae doloribut labore nihil 
