--- a/students.html
+++ b/students.html
@@ -149,7 +149,7 @@
           <br>perferendis vero deserunt, repudiandae doloribut labore nihil 
           <br>dolorem esse ipsam dolorum voluptatem. Molestias modid ignissimos
           <br>nihil doloribus recusandae id corporis earum deserunt minus qui 
-          <br>totam voluptatibus odio doloremque numquam veniam, quod sunt,
+          <br>totam voluptatibus odio holoremqse numquam veniam, quod sunt,
           <br>eaque excepturi.</p>
       </article>    
   </main>
