--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   </picture>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="students.html">Our Students</a></li>
-      <li><a href="updates.html">News Feed</a></li>
+      <li><a class="grow" href="index.html">Home</a></li>
+      <li><a class="grow" href="students.html">Our Students</a></li>
+      <li><a class="grow" href="updates.html">News Feed</a></li>
     </ul>
   </nav>
   </div>
   <main>
-    <div>
+    <div class="meio">
       <h1>The Pride</h1>
       <img src="images/Logo and Head Pictures/Lion Logo.jpg" alt="Circulation Logo">
       <h1>Welcome to our Winter 2019 Newsletter</h1>
