--- a/updates.html
+++ b/updates.html
@@ -32,31 +32,21 @@
       <br>Topic
       <br>Sentences </p>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut 
-        <br>commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec eratLorem ipsum 
-        <br>dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, 
-        <br>sapien dui mattis dui, non pulvinar lorem felis nec eratLorem ipsum dolor sit amet, 
-        <br>consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui 
-        <br>mattis dui, non pulvinar lorem felis nec eratLorem ipsum dolor sit amet, consectetur 
-        <br>adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non 
-        <br>pulvinar lorem felis nec eratLorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        <br>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem 
-        <br>elis nec eratLorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, 
-        <br>nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec 
-        <br>eratLorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut 
-        <br>commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec eratLorem ipsum 
-        <br>dolor sit amet, consectetur adipiscing elit. </p>
-      <P>Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem 
-        <br>felis nec eratLorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, 
-        <br>nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec 
-        <br>eratLorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut 
-        <br>commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec eratLorem ipsum 
-        <br>dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, 
-        <br>sapien dui mattis dui, non pulvinar lorem felis nec eratLorem ipsum dolor sit amet, 
-        <br>consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui 
-        <br>mattis dui, non pulvinar lorem felis nec eratLorem ipsum dolor sit amet, consectetur 
-        <br>adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non 
-        <br>pulvinar lorem felis nec eratLorem ipsum dolor sit amet.</p>
+      <p>Let me share with you my experience of how working in college laid the 
+        <br>foundation for my future. While I was at BYU, I was a Near Eastern Studies 
+        <br>major and spent three years as a research assistant for a faculty member 
+        <br>in my department. There are two ways this job helped prepare me for my 
+        <br>future. In one way, l developed skills as an employee that I still use today. 
+        <br>I learned how to work independently on assigned projects, meet weekly deadlines, 
+        <br>write professionally, and understand the publication process for books and articles.</p>
+      <p>Beyond that, this professor also became somewhat of a mentor to me. He gave me 
+        <br>advice and helped me navigate my way to a master’s program in Jewish Studies. 
+        <br>It was while I was in graduate school that I decided to become a librarian. After 
+        <br>I graduated from my master’s program, I pulled out some of his application 
+        <br>suggestions again to use for library school and my applications to grad school 
+        <br>round 2 were even better than before. Eventually I made my way to BYU-Idaho and 
+        <br>became the Religion librarian based on my past education and work experience. You 
+        <br>never know how what you do now will directly impact your future.</p>
     </article>
   </main>
   <footer>
