Lots of changes to file naming, added normalize, changed CSS, and updated colors and two media queries.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Newsletter Template</title>
   <meta name="description" content="150 characters">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-      <div class="Logo-box">
-      <a href="https://library.byui.edu/"><img src="images/Logo and Head Pictures/Logo.png" alt="Logo"></a>
-      <h3>Circulation Team David O. McKay Library</h3>
-      </div>
+      <a href="https://library.byui.edu/">
+        <img src="images/logos/mainlogo.png" alt="Library Logo"></a>
+      <h1>Circulation Team David O. McKay Library</h1>
   </header>
-  <picture>
-    <img src="images/Logo and Head Pictures/Head Picture.png" alt="David O. McKayLibrary">
+  <picture class="hero">
+    <img src="images/logos/headerpicture.png" alt="David O. McKay Library">
   </picture>
   <nav>
     <ul>
@@ -30,17 +30,18 @@
   </div>
   <main>
     <div class="meio">
-      <h1>The Pride</h1>
-      <img src="images/Logo and Head Pictures/Lion Logo.jpg" alt="Circulation Logo">
-      <h1>Welcome to our Winter 2019 Newsletter</h1>
+      <h2>The Pride</h2>
+      <img src="images/logos/lionlogo.jpg" alt="Circulation Logo">
+      <h3>Welcome to our Winter 2019 Newsletter</h3>
     </div>
   </main>
   <footer>
     <p>
-      This web page is not affiliated or supported  by any institution <br/>&copy; 2019 Circulation Team
+      This web page is not affiliated or supported by any institution <br />
+      &copy; 2019 Circulation Team
     </p>
   </footer>
 
 </body>
-<!---->
+
 </html>
