--- a/students.html
+++ b/students.html
@@ -19,7 +19,7 @@
   </header>
   <nav>
     <ul>
-      <li><a href="#">Home</index></a></li>
+      <li><a href="main.html">Home</index></a></li>
       <li><a href="students.html">Our Students</a></li>
       <li><a href="updates.html">Updates</a></li>
     </ul>
