--- a/updates.html
+++ b/updates.html
@@ -18,7 +18,7 @@
   </header>
   <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="main.html">Home</a></li>
         <li><a href="students.html">Our Students</a></li>
         <li><a href="updates.html">Updates</a></li>
       </ul>
