--- a/students.html
+++ b/students.html
@@ -116,7 +116,7 @@
           work at the library for the last 2 years. Because of working here, I've grown many of my hard and soft
           skills. I'm also grateful for everyone helping out and being so kind to my family 
           these last few semesters especially while Dani was at work. It's been a huge blessing for us. 
-          Please keep in touch!<br><br>
+          Please keep in touch!"<br><br>
           <a href="https://www.facebook.com/autrey7" target="_blank"><img src="images/logos/facebook.jpg" 
             id="social-media-logo" alt="facebook"></a> 
           <a href="https://www.linkedin.com/in/kyle-autrey/" target="_blank"><img src="images/logos/Linkdin.jpg" 
@@ -152,11 +152,11 @@
       </article>
       <article class="pic-Grad4">
         <img src="images/graduating/Makenzie.jpg" alt="McKenzie">
-        <p>McKenzie Hunsaker<br><br>I am from Filer Idaho which is near Twin Falls. 
+        <p>McKenzie Hunsaker<br><br>"I am from Filer Idaho which is near Twin Falls. 
           I am studying elementary education and LOVE it! Seriously. It is the best.
           I am going to be moving to Utah in January so that is awesome. 
           Very excited for something new. I also love working at the library. 
-          It has been one of my very favorite things about college!<br><br>
+          It has been one of my very favorite things about college!"<br><br>
           <a href="https://www.facebook.com/mckenzie.hunsaker" target="_blank"><img src="images/logos/facebook.jpg" 
             id="social-media-logo" alt="facebook"></a> 
           <a href="https://www.linkedin.com/in/mckenzie-hunsaker/" target="_blank"><img src="images/logos/Linkdin.jpg" 
@@ -174,14 +174,20 @@
             id="social-media-logo" alt="facebook"></a> 
           <a href="https://www.linkedin.com/in/emma-st-john-9b7495128/" target="_blank"><img src="images/logos/Linkdin.jpg" 
             id="social-media-logo" alt="Linkdin"></a></p>
-      </article>  
+      </article>
+      <article class="pic-Grad6">
+        <img src="#" alt="Montana">
+        <p>Montana Manapat<br><br>"I am a New Jersey native, with roots in Philadelphia and South Jersey. 
+          My degree is in art education. With my degree I'd like to teach studio art classes and work in 
+          art museums. Art is very important to me. I have worked at the library for about 3 and a half years. 
+          Working here has been a great privilege and experience. 
+          I have had the pleasure of working with so many great people. Thank you guys for all you do."<br><br>
+      </article> 
   </main>
   <footer>
     <p>
       This web page is not affiliated or supported  by any institution <br/>&copy; 2019 Circulation Team
     </p>
   </footer>
-<!---->
 </body>
-
 </html>
