--- a/students.html
+++ b/students.html
@@ -176,12 +176,14 @@
             id="social-media-logo" alt="Linkdin"></a></p>
       </article>
       <article class="pic-Grad6">
-        <img src="#" alt="Montana">
+        <img src="images/graduating/Montana.jpg" alt="Montana">
         <p>Montana Manapat<br><br>"I am a New Jersey native, with roots in Philadelphia and South Jersey. 
           My degree is in art education. With my degree I'd like to teach studio art classes and work in 
           art museums. Art is very important to me. I have worked at the library for about 3 and a half years. 
           Working here has been a great privilege and experience. 
           I have had the pleasure of working with so many great people. Thank you guys for all you do."<br><br>
+          <a href="https://www.instagram.com/doodle_spooks/" target="_blank"><img src="images/logos/Instagram.png" 
+            id="social-media-logo" alt="Instagram"></a></p>
       </article> 
   </main>
   <footer>
